after class push 2

--- a/Ticker_Data.ipynb
+++ b/Ticker_Data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "78781285",
+   "id": "218f7997",
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +482,243 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "f212d0d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-08-15</th>\n",
+       "      <td>477.970001</td>\n",
+       "      <td>489.420013</td>\n",
+       "      <td>475.089996</td>\n",
+       "      <td>486.869995</td>\n",
+       "      <td>486.869995</td>\n",
+       "      <td>586100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-16</th>\n",
+       "      <td>485.329987</td>\n",
+       "      <td>488.600006</td>\n",
+       "      <td>483.230011</td>\n",
+       "      <td>485.500000</td>\n",
+       "      <td>485.500000</td>\n",
+       "      <td>500800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-17</th>\n",
+       "      <td>482.720001</td>\n",
+       "      <td>496.299988</td>\n",
+       "      <td>482.630005</td>\n",
+       "      <td>492.510010</td>\n",
+       "      <td>492.510010</td>\n",
+       "      <td>852000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-18</th>\n",
+       "      <td>493.989990</td>\n",
+       "      <td>497.200012</td>\n",
+       "      <td>490.429993</td>\n",
+       "      <td>492.880005</td>\n",
+       "      <td>492.880005</td>\n",
+       "      <td>592000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-19</th>\n",
+       "      <td>492.130005</td>\n",
+       "      <td>493.239990</td>\n",
+       "      <td>487.839996</td>\n",
+       "      <td>490.750000</td>\n",
+       "      <td>490.750000</td>\n",
+       "      <td>606600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-08</th>\n",
+       "      <td>436.000000</td>\n",
+       "      <td>438.420013</td>\n",
+       "      <td>432.309998</td>\n",
+       "      <td>432.899994</td>\n",
+       "      <td>432.899994</td>\n",
+       "      <td>664800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-09</th>\n",
+       "      <td>433.000000</td>\n",
+       "      <td>437.570007</td>\n",
+       "      <td>432.459991</td>\n",
+       "      <td>435.549988</td>\n",
+       "      <td>435.549988</td>\n",
+       "      <td>1547800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-10</th>\n",
+       "      <td>434.350006</td>\n",
+       "      <td>434.739990</td>\n",
+       "      <td>429.640015</td>\n",
+       "      <td>430.269989</td>\n",
+       "      <td>430.269989</td>\n",
+       "      <td>800500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-11</th>\n",
+       "      <td>430.269989</td>\n",
+       "      <td>432.660004</td>\n",
+       "      <td>429.670013</td>\n",
+       "      <td>431.049988</td>\n",
+       "      <td>431.049988</td>\n",
+       "      <td>733800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-14</th>\n",
+       "      <td>431.230011</td>\n",
+       "      <td>432.890015</td>\n",
+       "      <td>429.010010</td>\n",
+       "      <td>429.450012</td>\n",
+       "      <td>429.450012</td>\n",
+       "      <td>516700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close   Adj Close  \\\n",
+       "Date                                                                     \n",
+       "2022-08-15  477.970001  489.420013  475.089996  486.869995  486.869995   \n",
+       "2022-08-16  485.329987  488.600006  483.230011  485.500000  485.500000   \n",
+       "2022-08-17  482.720001  496.299988  482.630005  492.510010  492.510010   \n",
+       "2022-08-18  493.989990  497.200012  490.429993  492.880005  492.880005   \n",
+       "2022-08-19  492.130005  493.239990  487.839996  490.750000  490.750000   \n",
+       "...                ...         ...         ...         ...         ...   \n",
+       "2023-08-08  436.000000  438.420013  432.309998  432.899994  432.899994   \n",
+       "2023-08-09  433.000000  437.570007  432.459991  435.549988  435.549988   \n",
+       "2023-08-10  434.350006  434.739990  429.640015  430.269989  430.269989   \n",
+       "2023-08-11  430.269989  432.660004  429.670013  431.049988  431.049988   \n",
+       "2023-08-14  431.230011  432.890015  429.010010  429.450012  429.450012   \n",
+       "\n",
+       "             Volume  \n",
+       "Date                 \n",
+       "2022-08-15   586100  \n",
+       "2022-08-16   500800  \n",
+       "2022-08-17   852000  \n",
+       "2022-08-18   592000  \n",
+       "2022-08-19   606600  \n",
+       "...             ...  \n",
+       "2023-08-08   664800  \n",
+       "2023-08-09  1547800  \n",
+       "2023-08-10   800500  \n",
+       "2023-08-11   733800  \n",
+       "2023-08-14   516700  \n",
+       "\n",
+       "[251 rows x 6 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2022-08-15'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2023-08-15'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Date range\n",
+    "today = datetime.date.today()\n",
+    "start_date = today - datetime.timedelta(days=365*1) #trading days(252) * amount of years to go back \n",
+    "\n",
+    "start = start_date.strftime(\"%Y-%m-%d\")\n",
+    "end = today.strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "# Tickers of assets\n",
+    "assets = ['NOC']\n",
+    "assets.sort()\n",
+    "\n",
+    "# Downloading data\n",
+    "og_data1 = yf.download(assets, start = start, end = end)\n",
+    "#data = og_data.loc[:,('Adj Close', slice(None))]\n",
+    "#data.columns = assets\n",
+    "\n",
+    "#Y = data[assets].pct_change().dropna()\n",
+    "display(og_data1)\n",
+    "\n",
+    "display(start)\n",
+    "display(end)\n",
+    "#display(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
-   "id": "1c363fb8",
+   "id": "5b27c159",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "52e87b19",
+   "id": "8a93371d",
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +2153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0f15acf4",
+   "id": "010a7f92",
    "metadata": {},
    "outputs": [
     {
@@ -2808,7 +3043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbbbe2e1",
+   "id": "45a45685",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2816,7 +3051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0850263a",
+   "id": "0319e509",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2824,7 +3059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334eb335",
+   "id": "a80c17c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2832,7 +3067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e798df9",
+   "id": "a2da266f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2840,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9dccd1c",
+   "id": "f83f7c64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2848,7 +3083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5e67348",
+   "id": "b6209d3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2856,7 +3091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9300c82c",
+   "id": "6717c2cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2864,7 +3099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ea5cbb2",
+   "id": "fe8d7da0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2872,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06191ece",
+   "id": "63ae5e07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2880,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c17a8dcc",
+   "id": "7660689b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2888,7 +3123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75fce843",
+   "id": "d1b514c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2896,7 +3131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2987d76",
+   "id": "66daabc8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2904,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4f8bef",
+   "id": "24cf3a41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2912,7 +3147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fcf1339",
+   "id": "4723d852",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2920,7 +3155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ccac0a",
+   "id": "01058159",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2928,7 +3163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81cf12a",
+   "id": "67835872",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2936,7 +3171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52fffed9",
+   "id": "e751d536",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2944,7 +3179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c5e06e",
+   "id": "da1d5660",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2952,7 +3187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37211ad3",
+   "id": "9704620c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2960,7 +3195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39f8a47",
+   "id": "3993260e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2968,7 +3203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c62e15b",
+   "id": "018ba3bf",
    "metadata": {},
    "outputs": [],
    "source": []
